fixed scroll overflow and always on scroll bar

--- a/PassPast Fire/src/styles.scss
+++ b/PassPast Fire/src/styles.scss
@@ -17,6 +17,10 @@ body{
   margin: 0;
 }
 
+html {
+  overflow-y:scroll;
+}
+
 .login-icon{
   padding: 7px;
   height: 30px;
