--- a/PassPast Fire/src/theme.scss
+++ b/PassPast Fire/src/theme.scss
@@ -8,8 +8,8 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue.
-$primary: $mat-amber;
-$accent: $mat-red;
+$primary: $mat-cyan;
+$accent: $mat-green;
 $warn: $mat-red;
 
 
